# wrf_gpu

./: .gitignore  AGENTS.md  AI_USE.md  ARCHITECTURE_PRINCIPLES.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_AGENT.md  INSTALL.md  INTERFACE_CONTRACTS.md  KNOWN_ISSUES.md  LICENSE_NOTES.md  MILESTONES.md  MORNING-REPORT-2026-05-22.md  MORNING-REPORT-2026-05-27.md  MORNING-REPORT.md  NOTICE  PERFORMANCE_TARGETS.md  PLANS.md  PRECISION_POLICY.md  PROJECT_CONSTITUTION.md  PROJECT_PLAN.md  PROJECT_SCOPE.md  PROJECT_SPEC.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.16.0.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.18.2.md  RELEASE_NOTES_v0.18.3.md  RELEASE_NOTES_v0.19.0.md  (+20 more)
.agent/: README.md  SPRINT-TRACKER.md
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: README.md
codex/: README.md
data/: README.md
docs/: GPU_RUNBOOK.md  IDENTITY_PROOF.md  KNOWN_ISSUES.md  PERFORMANCE.md  README.md  REPRODUCIBILITY.md  VALIDATION.md  canary-operational-target.md  equivalence-demo.md  equivalence-switzerland.md  fixture-storage-policy.md  glossary.md  namelist-compatibility.md  open-source-forkability.md  quickstart.md  research-inputs.md  resource-profile.md  user-status-report-format.md
evals/: README.md
figures/: role_taxonomy.md
fixtures/: README.md  README_NO_LARGE_FILES.md
manifest/: git_state.json  proof_objects.json  reproducibility_assets.json
paper/: honesty_audit.md  paper.md  references.bib
proofs/: 2026-05-26-m7-gpu-profile-prep__wall_clock.json  2026-05-27-m7-daily-pipeline-integration__pipeline_run_20260521.json  2026-05-27-m7-daily-pipeline-integration__speedup_vs_cpu_24h.json  2026-05-27-m7-honest-speedup-skill-diff__gpu_vs_cpu_skill_diff.json  2026-05-27-m7-honest-speedup-skill-diff__honest_speedup_table.json  2026-05-27-m7-profiler-window-fix__d2h_audit_v2.json  2026-05-27-m7-profiler-window-fix__reproducibility_v2.json  2026-05-27-m7-restart-continuity__restart_continuity.json  2026-05-27-m7-skill-fix-algorithmic__invariant_preservation.json  2026-05-27-m7-skill-fix-algorithmic__pipeline_run_20260521.json  2026-05-27-m7-skill-fix-algorithmic__post_fix_skill_diff.json  2026-05-27-m7-skill-fix-algorithmic__post_fix_speedup.json  2026-05-27-m7-skill-fix-iter2__invariant_preservation_iter2.json  2026-05-27-m7-skill-fix-iter2__pipeline_run_20260521.json  2026-05-27-m7-skill-fix-iter2__post_iter2_skill_diff.json  2026-05-27-m7-skill-fix-iter2__post_iter2_speedup.json  2026-05-27-testing-plan-execution-redo__canary_first_error_growth.json  2026-05-27-testing-plan-execution-redo__savepoint_deep_column100.json  2026-05-27-testing-plan-execution-redo__savepoint_parity_deep.json  2026-05-27-testing-plan-execution-redo__stability_cfl_sweep.json  PROOF_TABLE.md
publish/: GPU_PORT_GAPS_TODO.md  LICENSE_RECOMMENDATION.md  README.md  VERIFICATION.md  paper_v1_ideas.md  paper_v1_ideas_gpt.md  runtime_optimization_analysis.md
release-assets/: .gitignore
scripts/: README.md  ab_nested_event_tail_guard.sh  agent_call.py  b200_drain.py  b200_io_lib.py  b200_validate_manifest.py  b4_b2_edge_seam.py  b4_boundary_application_validation.py  b4_fp64_verification.py  b4_metrics_terrain_consistency.py  b4_static_field_parity.py  build_grid_delta_atlas.py  build_identity_proof_plots.py  build_long_horizon_divergence_panel.py  build_switzerland_big_case.sh  build_switzerland_case.sh  build_thompson_aero_tables.py  check_m1_done.py  check_m2_done.py  check_m3_done.py  check_m4_done.py  close_sprint.py  community_validation.sh  compare_wrfout_grid.py  create_sprint.py  d03_replay.py  diagnostic_bound_violation_tracer.py  diagnostic_boundary_ring_error_profiler.py  diagnostic_conservation_tracker.py  diagnostic_field_rmse_timeline.py  diagnostic_first_bad_step_tracer.py  diagnostic_gen2_rmse_baseline.py  diagnostic_limiter_activation_tracker.py  diagnostic_operator_term_budget_tracer.py  diagnostic_sanitizer_audit.py  diagnostic_spatial_divergence_map.py  diagnostic_stabilizer_provenance_scanner.py  diagnostic_timestep_convergence_dashboard.py  diagnostic_transfer_launch_timeline.py  diagnostic_vertical_column_phase_space.py  (+206 more)
src/gpuwrf/backends/kokkos/: CMakeLists.txt  __init__.py  build.sh  column.cpp  host.cpp  stencil.cpp
tables/: comparators.md  m7_gates.md  performance_evolution.md  skill_evolution.md  sprint_ledger.md
tests/: README.md  _operational_source_guard.py  _parallel_compile_workers.py  conftest.py  test_adr_001_structure.py  test_agentos_smoke.py  test_analytic_fixtures.py  test_aot_cheap_key.py  test_aot_executable.py  test_async_wrfout_equiv.py  test_auxhist_multistream.py  (+280 more)
(+6474 files in other folders)
