[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuwrf"
version = "0.0.0"
description = "AgentOS bootstrap for a GPU-native WRF-compatible regional NWP project"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4",
  "netCDF4>=1.6",
  "numpy>=1.24",
  "PyYAML>=6",
  "zarr>=3.0,<4",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
gpuwrf = "gpuwrf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals/agentos"]
pythonpath = ["src"]
markers = [
    "close_gate: dycore close-gate tests that MUST assert verdict==PASS (require a JAX GPU backend); a regression to FAIL fails CI rather than being false-green.",
]
